[package]
name = "replay-mocker"
version = "0.1.0"
authors = ["Justin Miller <dragondef@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
futures = "0.3"
hyper = "0.13"
serde = {version = "1", features = ["derive"]} 
serde_json = "1.0"
bytes = "0.5"
tokio = { version = "0.2", features = ["full"] }
hyper-rustls = "0.21"

[dev-dependencies]
