[package]
name = "replay-mocker"
version = "0.1.0"
authors = ["Justin Miller <dragondef@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert-json-diff = "2"
async-trait = "0.1"
bytes = "1"
reqwest = { version = "0.11", default-features = false,features = ["json", "rustls-tls"] }
serde = {version = "1", features = ["derive"]} 
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.22"
warp = "0.3"

[dev-dependencies]
